[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/RedCard-item.gd" type="Script" id=1]
[ext_resource path="res://sprites/objects/red-card.png" type="Texture" id=2]
[ext_resource path="res://sound/pickup.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.08302, 4.89277 )

[node name="RedCard" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.132431, 2.11893 )
shape = SubResource( 1 )

[node name="PickupSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_onPickup"]
[connection signal="finished" from="PickupSfx" to="." method="_on_PickupSfx_finished"]
